added the hyperlink

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 				<li><a href="#">Home</a></li>
 				<li><a href="#about">About Me</a></li>
 				<li><a href="#service">Portfolio</a></li>
-				<li><a href="#">Skills</a></li>
-				<li><a href="#">Contacts</a></li>
+				<li><a href="#container">Skills</a></li>
+				<li><a href="#contact-me service">Contacts</a></li>
 			</ul>
 
 		</nav>
@@ -101,7 +101,7 @@
 	</div>
 
 	<!------Contact Me------>
-	<div class="contact-me service">
+	<div class="contact-me service" id="contact-me service">
 		<h3>Contact Form</h3>
 
 		<div class="container service">
@@ -133,7 +133,7 @@
 		<h1>My Skills</h1>
 
 		<p>HTML</p>
-		<div class="container">
+		<div class="container" id="container">
 			<div class="skills html">90%</div>
 		</div>
 
