--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
 			<div class="about-text">
 				<h2>About Me</h2>
 				<h5>Front End Developer <span>& UX Designer</span></h5>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero accusamus recusandae deleniti perferendis cumque exercitationem voluptatibus obcaecati porro quidem consequuntur, non numquam molestiae a, aliquam tempora placeat temporibus quae rerum..</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero accusamus recusandae deleniti
+					perferendis cumque exercitationem voluptatibus obcaecati porro quidem consequuntur, non numquam
+					molestiae a, aliquam tempora placeat temporibus quae rerum..</p>
 
 			</div>
 		</div>
@@ -69,7 +71,7 @@
 					<p style="text-align: center;">
 						<a class="button" href="https://fadumasaidcodes.github.io/faduma-marketing/">View project</a>
 					</p>
-						
+
 					</ul>
 				</div>
 			</div>
@@ -160,7 +162,7 @@
 		<p>Bellow is my Github Account:</p>
 		<div class="social">
 			<a href="https://github.com/fadumasaidcodes"><i class="fa- fa-github"></i></a>
-			
+
 
 		</div>
 		<p class="end">CopyRight By Faduma Ibrahim</p>
